system/base/traefik-forward-auth/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: azuread
spec:
  forwardAuth:
    address: http://traefik-forward-auth
    authResponseHeaders:
      - X-Forwarded-User
