system/base/traefik-forward-auth/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-forward-auth
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 80
      targetPort: 4181
      protocol: TCP
